Re-organised assets

--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -8,6 +8,6 @@
         <div class="text-xl">From Penang, Malaysia</div>
     </div>
     <div class="p-4 grow md:grow-0 flex justify-end" data-aos="zoom-in">
-        <img class="w-full max-w-80" src="/assets/profile-pic.png" />
+        <img class="w-full max-w-80" src="/assets/images/profile-pic.png" />
     </div>
 </div>
