--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -2,38 +2,28 @@
 <div class="text-gray-500 dark:text-gray-400 italic">A collection of my personal coding projects where I experiment with new technologies and ideas.</div>
 
 <div class="pt-10 grid grid-cols-1 md:grid-cols-2 gap-4 justify-center">
-    <a class="project__container" href="/projects/crescent">
-        <div class="group project text-stone-950">
-            <img class="project__img" src="/assets/projects/crescent.png" />
-            <div class="group-hover:opacity-80
-                        project__hover__backdrop"></div>
-            <div class="group-hover:visible 
-                        group-hover:opacity-100
-                        project__hover__details">
-                <div class="text-xl font-semibold mb-2">Crescent</div>
-                <div class="text-xs mb-2">A personal project management tool for organising tasks and projects.</div>
-                <button class="px-4 py-2 bg-white text-blue-800 rounded-full text-xs">
-                    See more
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
+    @for (project of projects; let index = $index; track index) {
+        <a class="h-60 bg-slate-100 dark:bg-slate-700 rounded-xl cursor-pointer
+                flex flex-col justify-start p-4 scale-100 hover:scale-[1.01] 
+                transition-transform duration-100" 
+            [href]="project.url">
+            <div class="group h-full relative text-stone-950">
+                <img class="w-full h-full object-cover object-top" [src]="project.image" />
+                <div class="group-hover:opacity-80 opacity-0 transition-opacity duration-300
+                            w-full h-full absolute top-0 left-0 bg-gray-300"></div>
+                <div class="group-hover:visible 
+                            group-hover:opacity-100
+                            invisible w-full h-full transition-opacity duration-300
+                            absolute top-0 left-0 p-8 text-center opacity-0
+                            flex flex-col justify-center items-center">
+                    <div class="text-xl font-semibold mb-2">{{ project.name }}</div>
+                    <div class="text-xs mb-2">{{ project.description }}</div>
+                    <button class="px-4 py-2 bg-white text-blue-800 rounded-full text-xs">
+                        See more
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
             </div>
-        </div>
-    </a>
-    <a class="project__container" href="/projects/quotes">
-        <div class="group project text-stone-950">
-            <img class="project__img" src="/assets/projects/quotes.png" />
-            <div class="group-hover:opacity-80
-                        project__hover__backdrop"></div>
-            <div class="group-hover:visible 
-                        group-hover:opacity-100
-                        project__hover__details">
-                <div class="text-xl font-semibold mb-2">Quotes</div>
-                <div class="text-xs mb-2">An iOS app to keep track of quotes that inspire and motivate you.</div>
-                <button class="px-4 py-2 bg-white text-blue-800 rounded-full text-xs">
-                    See more
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
-            </div>
-        </div>
-    </a>
+        </a>
+    }
 </div>
