--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -4,56 +4,56 @@
 <div data-aos="zoom-in" class="pt-10 flex flex-wrap justify-center w-full mx-auto gap-4">
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
-            <img src="/assets/skills/angular.png" />
+            <img src="/assets/images/skills/angular.png" />
         </div>
         <div class="text-xs">Angular</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
-            <img src="/assets/skills/jsIconGreen.svg" />
+            <img src="/assets/images/skills/jsIconGreen.svg" />
         </div>
         <div class="text-xs">Node.js</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-full h-20 mb-2 flex items-center">
-            <img class="w-1/2" src="/assets/skills/html5.png" />
-            <img class="w-1/2" src="/assets/skills/css3.png" />
+            <img class="w-1/2" src="/assets/images/skills/html5.png" />
+            <img class="w-1/2" src="/assets/images/skills/css3.png" />
         </div>
         <div class="text-xs">HTML & CSS</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
-            <img src="/assets/skills/ts.png" />
+            <img src="/assets/images/skills/ts.png" />
         </div>
         <div class="text-xs">Typescript</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
-            <img src="/assets/skills/js.png" />
+            <img src="/assets/images/skills/js.png" />
         </div>
         <div class="text-xs">Javascript</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
-            <img src="/assets/skills/fastapi.png" />
+            <img src="/assets/images/skills/fastapi.png" />
         </div>
         <div class="text-xs">FastAPI</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
-            <img src="/assets/skills/python.png" />
+            <img src="/assets/images/skills/python.png" />
         </div>
         <div class="text-xs">Python</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
-            <img src="/assets/skills/postgresql.png" />
+            <img src="/assets/images/skills/postgresql.png" />
         </div>
         <div class="text-xs">PostgreSQL</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
-            <img src="/assets/skills/git.svg" />
+            <img src="/assets/images/skills/git.svg" />
         </div>
         <div class="text-xs">Git</div>
     </div>
