--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
         </nav>
     } @else {
         <nav class="fixed bg-white dark:bg-stone-950 h-12 z-[9999] w-[inherit] flex justify-end">
-            <button class="p-4" (click)="navExpand = !navExpand; showContent = !showContent">
+            <button class="p-4" (click)="navExpand = !navExpand;">
                 <i [ngClass]="{
                     'fa-bars': !navExpand,
                     'fa-xmark': navExpand
@@ -26,7 +26,7 @@
     }
 
     @if (navExpand) {
-        <div class="pt-20 px-12">
+        <div class="fixed bg-white dark:bg-stone-950 z-[9998] w-screen h-screen pt-20 px-12">
             <ul>
                 <li class="pb-5 md:pb-0">
                     <div class="font-semibold text-4xl text-center">Amber</div>
@@ -43,17 +43,15 @@
         </div>
     }
     
-    @if (showContent) {
-        <div class="pt-20 px-6 lg:px-12 pb-40">
-            <router-outlet></router-outlet>
-        </div>
-        <button class="bg-blue-200 w-10 h-10 rounded-full text-white dark:text-slate-600 fixed right-4 bottom-4 transition-opacity duration-200"
-            [ngClass]="{
-                'opacity-1': canScrollToTop,
-                'opacity-0': !canScrollToTop
-            }"
-            (click)="scrollToTop()">
-            <i class="text-lg fa-solid fa-arrow-up"></i>
-        </button>
-    }
+    <div class="pt-20 px-6 lg:px-12 pb-40">
+        <router-outlet></router-outlet>
+    </div>
+    <button class="bg-blue-200 w-10 h-10 rounded-full text-white dark:text-slate-600 fixed right-4 bottom-4 transition-opacity duration-200"
+        [ngClass]="{
+            'opacity-1': canScrollToTop,
+            'opacity-0': !canScrollToTop
+        }"
+        (click)="scrollToTop()">
+        <i class="text-lg fa-solid fa-arrow-up"></i>
+    </button>
 </div>
