- Support display image in modal

--- a/src/app/pages/projects/project-crescent/project-crescent.component.html
+++ b/src/app/pages/projects/project-crescent/project-crescent.component.html
@@ -6,10 +6,10 @@
 </div>
 
 <div>
-    <h6 class="mb-4">Architecture</h6>
+    <h6 class="mb-4">Technologies and Tools</h6>
     <div class="mb-4">Client-Side</div>
     <ul class="list-disc *:mb-2 ms-4">
-        <li class="*:mb-1">Frontend Framework: The user interface is built with Angular 17.</li>
+        <li class="*:mb-1">Frontend Framework: The user interface is built with <u>Angular 17</u>.</li>
         <li class="*:mb-1">Styling: Utilises Tailwind CSS for responsive design, supporting both light and dark themes.</li>
         <li class="*:mb-1">State Management: Managed using NgRx in combination with RxJS observables.</li>
     </ul>
@@ -21,9 +21,14 @@
         <li class="*:mb-1">Authentication: Implemented using OAuth 2.0 with Google and JWT tokens.</li>
         <li class="*:mb-1">Email Service: Utilises Gmail API to send email to users for account verification and password reset.</li>
     </ul>
+
+    <div class="pt-4 mb-4">Source Control</div>
+    <ul class="list-disc *:mb-2 ms-4">
+        <li class="*:mb-1">Version Control: Managed with Git and hosted on GitHub.</li>
+    </ul>
 </div>
 
-<div class="mt-10">
+<div class="pt-32">
     <h6 class="mb-4">User Authentication</h6>
     <div class="text-sm mb-4">Support for Google OAuth 2.0 and username/password login</div>
     <ul class="list-disc *:mb-2 ms-4">
