--- a/src/app/pages/projects/project-quotes/project-quotes.component.html
+++ b/src/app/pages/projects/project-quotes/project-quotes.component.html
@@ -5,7 +5,16 @@
     </div>
 </div>
 
-<div class="mt-10">
+<div>
+    <h6 class="mb-4">Technologies and Tools</h6>
+    <ul class="list-disc *:mb-2 ms-4">
+        <li class="*:mb-1">Programming languages: Swift 5</li>
+        <li class="*:mb-1">Version control: Git</li>
+        <li class="*:mb-1">Data storage: Core Data</li>
+    </ul>
+</div>
+
+<div class="pt-32">
     <h6 class="mb-4">iPhone (6.5”)</h6>
     <app-img-gallery class="mt-4 block" data-aos="fade-up"
         [canSwitchMode]="false"
