--- a/src/app/components/img-gallery/img-gallery.component.html
+++ b/src/app/components/img-gallery/img-gallery.component.html
@@ -1,60 +1,59 @@
-
-
 <div #imgContainer class="overflow-hidden">
     <div #imgTrack class="flex w-max pb-10 transition-transform duration-300" 
         [style.transform]="'translateX(' + translateXValue + 'px)'">
-        @if (canSwitchMode) {
-            @if (isLightMode) {
-                @for (img of lightImages; track img) { 
-                    <div [hidden]="!img.status" class="img-container" [style.width]="imgWidth">
-                        <img class="h-full" [src]="img.src" (load)="img.status = true" />
-                        <span class="text-xs text-center mt-2">{{ img.caption }}</span>
-                    </div>
-                }
-            } @else {
-                @for (img of darkImages; track img) {
-                    <div [hidden]="!img.status" class="img-container" [style.min-width]="imgWidth">
-                        <img class="h-full" [src]="img.src" (load)="img.status = true" />
-                        <span class="text-xs text-center mt-2">{{ img.caption }}</span>
-                    </div>
-                }
-            }
-        } @else {
-            @for (img of images; track img) {
-                <div [hidden]="!img.status" class="img-container" [style.min-width]="imgWidth">
-                    <img class="h-full" [src]="img.src" (load)="img.status = true" />
-                    <span class="text-xs text-center mt-2">{{ img.caption }}</span>
-                </div>
-            }
+        @for (img of images; track img) {
+            <div class="cursor-pointer img-container" [hidden]="!img.status" [style.min-width]="imgWidth"
+                (click)="imgService.openImageModal(img.src, img.caption)">
+                <img class="h-full" [src]="img.src" (load)="img.status = true" />
+                <span class="text-xs text-center mt-2">{{ img.caption }}</span>
+            </div>
         }
     </div>
 </div>
 <div class="flex items-center justify-center">
     @if (canSwitchMode) {
         <div class="flex items-center h-10 rounded-full px-3 bg-slate-200 dark:bg-slate-800 mx-2 *:mx-2">
-            <div class="relative leading-5 align-middle">
+            <div class="group/light relative leading-5 align-middle">
                 <input #lightModeInput class="peer/light absolute top-1 left-1" type="radio" name="mode" [(ngModel)]="isLightMode" [value]="true" />
-                <button class="peer-focus/light:ring-2 ring-offset-6 ring-offset-slate-200 dark:ring-offset-slate-950 rounded-full relative w-5 h-5 align-middle" (click)="lightModeInput.focus(); lightModeInput.click()">
+                <button class="peer-focus/light:ring-2 ring-offset-6 ring-offset-slate-200 dark:ring-offset-slate-950 rounded-full relative w-5 h-5 align-middle" 
+                    (click)="lightModeInput.focus(); lightModeInput.click(); images = lightImages">
                     <span [ngClass]="{ 'ring-2 ring-offset-2 ring-offset-slate-200 dark:ring-offset-slate-950': isLightMode }" 
                     class="bg-gray-50 absolute top-0 left-0 w-full h-full rounded-full"></span>
+                    <span class="group-hover/light:opacity-100 opacity-0 
+                                group-hover/light:scale-105 tooltip">
+                        Light mode
+                    </span>
                 </button>
             </div>
-            <div class="relative leading-5 align-middle">
+            <div class="group/dark relative leading-5 align-middle">
                 <input #darkModeInput class="peer/dark absolute top-1 left-1" type="radio" name="mode" [(ngModel)]="isLightMode" [value]="false" />
-                <button class="peer-focus/dark:ring-2 ring-offset-6 ring-offset-slate-200 dark:ring-offset-slate-950 rounded-full relative w-5 h-5 align-middle" (click)="darkModeInput.focus(); darkModeInput.click()">
+                <button class="peer-focus/dark:ring-2 ring-offset-6 ring-offset-slate-200 dark:ring-offset-slate-950 rounded-full relative w-5 h-5 align-middle"
+                    (click)="darkModeInput.focus(); darkModeInput.click(); images = darkImages">
                     <span [ngClass]="{ 'ring-2 ring-offset-2 ring-offset-slate-200 dark:ring-offset-slate-950': !isLightMode }" 
                     class="bg-slate-700 absolute top-0 left-0 w-full h-full rounded-full"></span>
+                    <span class="group-hover/dark:opacity-100 opacity-0 
+                                group-hover/dark:scale-105 tooltip">
+                        Dark mode
+                    </span>
                 </button>
             </div>
         </div>
     }
 
     @if (images.length > 1 || lightImages.length > 1 || darkImages.length > 1) {
-        <button [disabled]="disableLeftButton" class="disabled:opacity-50 mx-2 text-2xl h-10 w-10 rounded-full bg-slate-200 dark:bg-slate-800" (click)="scrollLeft()">
+        <button [disabled]="disableLeftButton" class="disabled:opacity-50 group/scroll-left relative mx-2 text-2xl h-10 w-10 rounded-full bg-slate-200 dark:bg-slate-800" (click)="scrollLeft()">
             <i class="fa-solid fa-chevron-left"></i>
+            <span class="group-hover/scroll-left:opacity-100 opacity-0 
+                        group-hover/scroll-left:scale-105 tooltip">
+                Previous
+            </span>
         </button>
-        <button [disabled]="disableRightButton" class="disabled:opacity-50 mx-2 text-2xl h-10 w-10 rounded-full bg-slate-200 dark:bg-slate-800" (click)="scrollRight()">
+        <button [disabled]="disableRightButton" class="disabled:opacity-50 group/scroll-right relative mx-2 text-2xl h-10 w-10 rounded-full bg-slate-200 dark:bg-slate-800" (click)="scrollRight()">
             <i class="fa-solid fa-chevron-right"></i>
+            <span class="group-hover/scroll-right:opacity-100 opacity-0 
+                        group-hover/scroll-right:scale-105 tooltip">
+                Next
+            </span>
         </button>
     }
 </div>
