--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,29 @@
 @layer components {
     .tooltip {
         @apply scale-0 transition duration-100
-                absolute -top-7 left-0 text-xs whitespace-nowrap
+                absolute -top-7 -left-1 text-xs whitespace-nowrap
                 bg-black text-white rounded-md py-0.5 px-2 border-1 border-stone-800;
+    }
+
+    .app-backdrop {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        z-index: 1000;
+        pointer-events: none;
+        overflow: auto;
+    }
+    
+    .app-backdrop > .app-backdrop-content-wrapper {
+        position: absolute;
+        inset: 0;
+        z-index: 1001;
+        pointer-events: auto;
+    }
+    
+    .app-backdrop > .app-backdrop-content-wrapper.overlay {
+        @apply bg-[#45454550] dark:bg-[#3b3b3b8f] flex items-center justify-center;
     }
 }
