--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,10 +1,10 @@
 <h5 class="mb-2">About me</h5>
 <p class="mb-2">
-    I am a full stack web developer with a passion for creating interactive and responsive web applications.
+    I am a full stack software developer with a passion for creating interactive and responsive web applications.
 </p>
 <p class="mb-2">
     My journey into the world of coding began in 2009 when I started creating Google Blogger themes. 
-    This initial step quickly turned into a passion for coding and today, I am a software engineer with over 6 years of experience.
+    This initial step quickly turned into a passion for coding and today, I am a software developer with over 6 years of experience.
 </p>
 <p class="mb-2">
     I thrive on building applications from scratch with a particular enthusiasm for when engineering and design come together to create seamless user experiences.
