--- a/src/app/pages/projects/project-crescent/project-crescent.component.html
+++ b/src/app/pages/projects/project-crescent/project-crescent.component.html
@@ -9,7 +9,7 @@
     <h6 class="mb-4">Technologies and Tools</h6>
     <div class="mb-4">Client-Side</div>
     <ul class="list-disc *:mb-2 ms-4">
-        <li class="*:mb-1">Frontend Framework: The user interface is built with <u>Angular 17</u>.</li>
+        <li class="*:mb-1">Frontend Framework: The user interface is built with Angular 17.</li>
         <li class="*:mb-1">Styling: Utilises Tailwind CSS for responsive design, supporting both light and dark themes.</li>
         <li class="*:mb-1">State Management: Managed using NgRx in combination with RxJS observables.</li>
     </ul>
@@ -73,6 +73,9 @@
     <ul class="list-disc *:mb-2 ms-4">
         <li class="text-sm text-gray-500 dark:text-gray-400">
             Support viewing tasks in board view, calendar view (monthly and weekly), and table view.
+        </li>
+        <li class="text-sm text-gray-500 dark:text-gray-400">
+            Set due date, prority, and breakdown tasks into subtasks.
         </li>
     </ul>
     <app-img-gallery class="mt-4 block" data-aos="fade-up"
