--- a/src/app/pages/projects/project-crescent/project-crescent.component.html
+++ b/src/app/pages/projects/project-crescent/project-crescent.component.html
@@ -45,8 +45,7 @@
     <app-img-gallery class="mt-4 block" data-aos="fade-up"
         [canSwitchMode]="true"
         [lightImages]="lightAuthImages" [darkImages]="darkAuthImages" 
-        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" 
-    />
+        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
 </div>
 
 <div class="mt-10">
@@ -63,8 +62,7 @@
     <app-img-gallery class="mt-4 block" data-aos="fade-up"
         [canSwitchMode]="true"
         [lightImages]="lightProjImages" [darkImages]="darkProjImages" 
-        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" 
-    />
+        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
 </div>
 
 <div class="mt-10">
@@ -81,6 +79,5 @@
     <app-img-gallery class="mt-4 block" data-aos="fade-up"
         [canSwitchMode]="true"
         [lightImages]="lightTaskImages" [darkImages]="darkTaskImages" 
-        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" 
-    />
+        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
 </div>
