--- a/src/app/pages/projects/project-quotes/project-quotes.component.html
+++ b/src/app/pages/projects/project-quotes/project-quotes.component.html
@@ -19,8 +19,7 @@
     <app-img-gallery class="mt-4 block" data-aos="fade-up"
         [canSwitchMode]="false"
         [images]="iPhone65Images"
-        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" 
-    />
+        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
 </div>
 
 <div class="mt-10">
@@ -28,8 +27,7 @@
     <app-img-gallery class="mt-4 block" data-aos="fade-up"
         [canSwitchMode]="false"
         [images]="iPhone55Images"
-        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" 
-    />
+        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
 </div>
 
 <div class="mt-10">
@@ -38,6 +36,5 @@
     <app-img-gallery class="mt-4 block" data-aos="fade-up"
         [canSwitchMode]="false"
         [images]="watchImages"
-        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" 
-    />
+        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
 </div>
