--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -6,6 +6,18 @@
         </div>
         <div class="text-4xl text-blue-400 typing">{{ occupation }}</div>
         <div class="text-xl">From Penang, Malaysia</div>
+
+        <div class="pt-10 flex">
+            @for (contact of data | async; let index = $index; track index) {
+                <a class="group relative me-5 hover:scale-105" [href]="contact.link" target="_blank">
+                    <i class="text-md" [ngClass]="contact.icon"></i>
+                    <span class="group-hover:opacity-100 opacity-0 
+                                group-hover:scale-105 tooltip">
+                        {{ contact.tooltip }}
+                    </span>
+                </a>
+            }
+        </div>
     </div>
     <div class="p-4 grow md:grow-0 flex justify-end" data-aos="zoom-in">
         <img class="w-full max-w-80" src="/assets/images/profile-pic.png" />
