--- a/src/app/pages/projects/project-quotes/project-quotes.component.html
+++ b/src/app/pages/projects/project-quotes/project-quotes.component.html
@@ -14,27 +14,17 @@
     </ul>
 </div>
 
-<div class="pt-32">
-    <h6 class="mb-4">iPhone (6.5”)</h6>
-    <app-img-gallery class="mt-4 block" data-aos="fade-up"
-        [canSwitchMode]="false"
-        [images]="iPhone65Images"
-        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
-</div>
-
-<div class="mt-10">
-    <h6 class="mb-4">iPhone (5.5”)</h6>
-    <app-img-gallery class="mt-4 block" data-aos="fade-up"
-        [canSwitchMode]="false"
-        [images]="iPhone55Images"
-        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
-</div>
-
-<div class="mt-10">
-    <h6 class="mb-4">Apple watch</h6>
-    <div class="text-sm mb-4">View quotes on your wrist</div>
-    <app-img-gallery class="mt-4 block" data-aos="fade-up"
-        [canSwitchMode]="false"
-        [images]="watchImages"
-        [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
+<div class="pt-20">
+    @for (row of data | async; track row.label)  {
+        <div class="mt-10">
+            <h6 class="mb-4">{{ row.label }}</h6>
+            @if (row.description) {
+                <div class="text-sm mb-4">{{ row.description }}</div>
+            }
+            <app-img-gallery class="mt-4 block" data-aos="fade-up"
+                [canSwitchMode]="false"
+                [images]="row.images"
+                [imgWidth]="imgWidth" [scrollAmount]="scrollAmount" />
+        </div>
+    }
 </div>
