--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,4 +1,4 @@
-<h5 class="mb-2">My Tech Stack</h5>
+<h5 class="mb-2">Tech Stack</h5>
 <div class="text-gray-500 dark:text-gray-400 italic">Technologies I've been working with recently.</div>
 
 <div data-aos="zoom-in" class="pt-10 flex flex-wrap justify-center w-full mx-auto gap-4">
@@ -25,13 +25,13 @@
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
             <img src="/assets/images/skills/ts.png" />
         </div>
-        <div class="text-xs">Typescript</div>
+        <div class="text-xs">TypeScript</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
             <img src="/assets/images/skills/js.png" />
         </div>
-        <div class="text-xs">Javascript</div>
+        <div class="text-xs">JavaScript</div>
     </div>
     <div class="bg-slate-100 dark:bg-slate-700 rounded-xl w-28 h-28 flex flex-col items-center p-4 mb-4">
         <div class="hover:scale-105 w-11 h-20 mb-2 flex items-center">
