- Retrieve all project info from json file - Added data.model.ts to keep the interface models

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -2,7 +2,7 @@
 <div class="text-gray-500 dark:text-gray-400 italic">Let's discuss, I would love to connect and discuss how we can work together.</div>
 
 <div class="pt-10 flex justify-center">
-    @for (contact of data | async; let index = $index; track index) {
+    @for (contact of data$ | async; let index = $index; track index) {
         <a class="group relative mx-10 hover:scale-105" [href]="contact.link" target="_blank">
             <i class="text-7xl" [ngClass]="contact.icon"></i>
             <span class="group-hover:opacity-100 opacity-0 
