--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -28,7 +28,7 @@
     <ul class="list-disc *:mb-2">
         <li class="*:mb-1">
             <div>Software Engineer</div>
-            <div class="text-gray-500 dark:text-gray-400">Aug 2021 - Present | Yell Research Sdn Bhd | Remote (Kuala Lumpur)</div>
+            <div class="text-gray-500 dark:text-gray-400">Aug 2021 - Sept 2024 | Yell Research Sdn Bhd | Kuala Lumpur (Remote)</div>
         </li>
         <li class="*:mb-1">
             <div>Software Engineer</div>
@@ -66,7 +66,7 @@
         <i class="fa-solid fa-file-pdf pe-2"></i>
         Download resume
         <span class="group-hover:opacity-100 opacity-0 
-                    group-hover:scale-105 tooltip">
+                     group-hover:scale-105 tooltip">
             Grab my resume!
         </span>
     </a>
