- renamed download resume name

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -56,7 +56,7 @@
 
 <div class="mt-8">
     <a class="group relative hover:bg-slate-200 dark:hover:bg-slate-800 px-4 py-2 -left-4 rounded-full" 
-        href="assets/amber_eu_resume.pdf" download="amber_eu_resume_se.pdf">
+        href="assets/amber_eu_resume.pdf" download="amber_eu_resume_se">
         <i class="fa-solid fa-file-pdf pe-2"></i>
         Download resume
         <span class="group-hover:opacity-100 opacity-0 
